<resources>
    <string name="app_name">OverLauncher</string>
    <string name="add">添加</string>
    <string name="ethconn">有线网络</string>
    <string name="noconn">无网络</string>
    <string name="wificonn">无线网络</string>
    <string name="testing">测速中....</string>
    <string name="test">测速</string>
    <string name="netspeedTip">当前网速已到达 %dkb/s</string>
    <string name="live">电视剧</string>
    <string name="film">电影</string>
    <string name="cartoon">儿童动画</string>
    <string name="news">新闻热点</string>
    <string name="tvplay">电视剧</string>
    <string name="variety">热门综艺</string>
    <string name="sportsevents">体育赛事</string>
    <string name="video">影视</string>
    <string name="music">音乐</string>
    <string name="Tools">工具</string>
    <string name="settings">设置</string>
    <string name="apps">程序列表</string>
    <string name="login">登录</string>
    <string name="weather">天气设置</string>
    <string name="speed">网络测速</string>
    <string name="netset">网络设置</string>
    <string name="dateset">日期和时间</string>
    <string name="soundset">声音设置</string>
    <string name="disset">显示设置</string>
    <string name="flashset">存储信息</string>
    <string name="imeset">语言和输入法</string>
    <string name="infoset">设备信息</string>
    <string name="factoryset">恢复出厂设置</string>
    <string name="appset">应用管理</string>
    <string name="develpoeset">开发者选项</string>
    <string name="moreset">更多设置</string>
    <string name="CleanMaster">一键加速</string>
    <string name="CleanedMemory">已清理 ：%1$s MB 当前可用内存为：%2$s M</string>

    <string name="appstip">长按 OK 或者菜单键更多功能</string>
    <string name="foldertip">长按 OK 删除应用</string>
    <string name="fasykey">按键直达</string>
    <string name="filemanager">文件管理</string>
    <string name="clean">一键清理</string>
    <string name="search">搜索</string>
    <string name="common">常用</string>

    <string name="history">历史</string>
    <string name="default_city">北京</string>
    <string name="Add">添加</string>
    <drawable name="clr_normal">#c80808</drawable>
    <drawable name="clr_pressed">#2ba3ff</drawable>
    <string name="applist_title">应用程序（%d）</string>
    <string name="applist_availabel_space">可用空间：%dM</string>
    <string name="toast_open_app">按下打开快捷应用,按菜单更多功能</string>
    <string name="toast_close_app">按上或返回退出</string>
    <string name="title_tip">按OK打开应用，长按OK删除应用</string>
    <string name="add_tip">按OK添加应用</string>
    <string name="open_tip">点击打开</string>
    <string name="reCommand_tip">精彩推荐</string>
    <string name="downLoad_tip">点击下载应用</string>

    <string name="errdownload">数据包校验失败，重新下载中…</string>
    <string name="Clickdown">点击下载</string>
    <string name="Redown">重新下载</string>
    <string name="downloading_wait">有任务正在下载，请完成后再试</string>
    <string name="Downloading_exit_warning">应用正在下载，退出将中断。是否结束下载？</string>
    <string name="Installing">下载完成，正在安装</string>
    <string name="Downloading">正在下载…%s</string>
    <string name="DownloadFailed">下载失败</string>
    <string name="errdownloadnumlimite">数据包无法通过校验，稍后再试</string>
    <string name="Cancel">取消</string>
    <string name="Ok">确定</string>
    <string name="Exit">结束下载</string>
    <string name="NullText">表题不能为空</string>
    <string name="Rename">重命名</string>

    <string name="btn_enter">确定</string>
    <string name="Locating">正在定位</string>
    <string name="str_cloudy">多云</string>
    <string name="str_sunny">晴</string>
    <string name="str_shade">阴</string>
    <string name="str_smoke">浮尘</string>
    <integer name="int20">20</integer>
    <integer name="int100">100</integer>
    <integer name="int30">30</integer>
    <integer name="int35">35</integer>
    <integer name="int5">5</integer>
    <integer name="int15">15</integer>
    <string name="str_h_sand_storm">强沙尘暴</string>
    <string name="str_sand_storm">沙尘暴</string>
    <string name="str_fog">雾</string>
    <string name="str_sand_blowing">扬沙</string>
    <string name="str_s_snow">小雪</string>
    <string name="str_m_snow">中雪</string>
    <string name="str_l_snow">大雪</string>
    <string name="str_h_snow">暴雪</string>
    <string name="str_snow_shower">阵雪</string>
    <string name="str_s_rain">小雨</string>
    <string name="str_m_rain">中雨</string>
    <string name="str_l_rain">大雨</string>
    <string name="str_h_rain">暴雨</string>
    <string name="str_hh_rain">大暴雨</string>
    <string name="str_hhh_rain">特大暴雨</string>
    <string name="str_shower">阵雨</string>
    <string name="str_thunder_shower">雷阵雨</string>
    <string name="city_pick">选择城市</string>
    <string name="hot_city">热门城市</string>
    <string name="auto_city">自动获取城市</string>
    <string name="helpsupport">帮助与支持</string>
    <string name="auto">自动</string>
    <string name="net_tip">当前网络不可用，请设置网络</string>
    <string name="neterro_tip">网络错误</string>
    <string name="my_key"> 一键直达</string>
    <string name="add_keytip"> 点击选择应用</string>
    <string name="remove_keytip"> 长按ok移除应用</string>
    <string name="nullapp">您还没有配置该应用！！！</string>
    <string name="holdtitle">正在安装…</string>
    <string name="hold">"注意:
1.请不要断电或关机；
2.请不要进行其他操作，以免安装过程出现问题；
3.安装过程需要3~5分钟，请耐心等待"</string>
    <string name="tip">注意</string>
    <string name="tipContent">程序已经安装完成，是否重新安装？</string>
    <string name="installAgain">重新安装</string>
    <string name="cancel">关闭</string>
</resources>
