<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="480dp"
    android:layout_height="380dp"
    android:background="@mipmap/install_background" >

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="10dp"
        android:text="@string/tip"
        android:textSize="30sp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="100dp"
        android:text="@string/tipContent"
        android:textSize="23sp" />

    <TextView
        android:id="@+id/installAgain"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_marginLeft="60dp"
        android:layout_marginTop="280dp"
        android:textSize="25sp"
        android:textColor="#ffffff"
        android:gravity="center"
        android:focusable="true"
        android:background="@drawable/button_background"
        android:text="@string/installAgain" />

    <TextView
        android:id="@+id/cancel"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_marginRight="60dp"
        android:layout_marginTop="280dp"
        android:textSize="25sp"
        android:textColor="#ffffff"
        android:gravity="center"
        android:focusable="true"
        android:background="@drawable/button_background"
        android:text="@string/cancel" />

</RelativeLayout>