<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@mipmap/appinfo_background" >
    
    
    <ImageView
        android:id="@+id/image"
        android:layout_height="100dp"
        android:layout_width="100dp"
        android:layout_marginTop="40dp"
        android:layout_marginLeft="40dp"
        android:scaleType="fitXY" />
    
    <TextView
        android:id="@+id/label"
        android:layout_height="wrap_content"
        android:layout_width="200dp"
        android:layout_toRightOf="@id/image"
        android:layout_marginTop="70dp"
        android:layout_marginLeft="15dp"
        android:textSize="30sp"
        android:singleLine="true"
        android:ellipsize="marquee" />
    
    <TextView
        android:id="@+id/description"
        android:layout_height="140dp"
        android:layout_width="300dp"
        android:layout_alignLeft="@id/image"
        android:layout_below="@id/image"
        android:layout_marginTop="15dp"
        android:textColor="@color/white"
        android:textSize="20sp" />
    
     
    <TextView
        android:id="@+id/errdown"
        android:layout_height="50dp"
        android:layout_centerHorizontal="true"
        android:layout_width="wrap_content"
        android:layout_below="@id/description"
        android:layout_marginTop="25dp"
        android:textColor="@color/white"
        android:text="@string/errdownload"
        android:visibility="gone"
        android:textSize="20sp" />
    
    <Button
        android:id="@+id/download"
        android:layout_height="60dp"
        android:layout_width="145dp"
        android:text="@string/Clickdown"
        android:textSize="20sp"
        android:textColor="#000000"
        android:gravity="center"
        android:layout_below="@id/errdown"
        android:layout_marginTop="15dp"
        android:layout_marginLeft="35dp"
        
        android:layout_marginBottom="20dp"
        android:background="@drawable/download_button_background" />
    
    <Button
        android:id="@+id/reDownload"
        android:layout_height="60dp"
        android:layout_width="145dp"
        android:text="@string/Redown"
        android:textSize="20sp"
        android:textColor="#000000"
        android:gravity="center"
        android:layout_toRightOf="@id/download"
        android:layout_marginLeft="10dp"
        android:layout_below="@id/errdown"
        android:layout_marginTop="15dp"
        android:layout_marginBottom="20dp"
        android:background="@drawable/download_button_background" />
    
    

</RelativeLayout>
