<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    xmlns:tv="http://schemas.android.com/apk/res-auto"
    android:layout_height="@dimen/px370"
    >
    <ImageView
        android:id="@+id/top_arrow"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:src="@mipmap/button_iv"
        android:visibility="gone"
        android:focusable="false"
        android:layout_gravity="center_horizontal|bottom"/>
    <LinearLayout
        android:layout_width="@dimen/px1380"
        android:layout_height="@dimen/px260"
        android:layout_gravity="center_horizontal"
        android:orientation="horizontal"
        android:paddingLeft="@dimen/px50"
        android:paddingRight="@dimen/px50"
        android:paddingTop="@dimen/px20"
        android:background="@mipmap/top_bg"
        >
        <RelativeLayout
            android:id="@+id/item1r"
            android:focusable="false"
            android:focusableInTouchMode="false"
            android:layout_width="@dimen/px160"
            android:layout_height="@dimen/px210"
            android:layout_gravity="left">
        <ImageView
            android:id="@+id/item1"
            android:layout_width="@dimen/px160"
            android:layout_height="@dimen/px160"
            android:padding="@dimen/px25"
            android:focusable="true"
            android:focusableInTouchMode="true"
            android:src="@mipmap/search"
            android:background="@drawable/top_selector"
            android:nextFocusDown="@+id/gallery"
            android:nextFocusLeft="@+id/item1"
            android:onClick="TopOnclick"
            />
        <TextView
            android:layout_width="@dimen/px150"
            android:layout_height="wrap_content"
            android:textColor="@color/white_90"
            android:layout_below="@+id/item1"
            android:layout_marginTop="@dimen/px10"
            android:gravity="center"
            android:focusable="false"
            android:focusableInTouchMode="false"
            android:textSize="@dimen/px30"
            android:text="@string/search"/>
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/item2r"
            android:layout_width="@dimen/px160"
            android:layout_height="@dimen/px210"
            android:focusable="false"
            android:focusableInTouchMode="false"
            >
            <ImageView
                android:id="@+id/item2"
                android:layout_width="@dimen/px160"
                android:layout_height="@dimen/px160"
                android:padding="@dimen/px25"
                android:focusable="true"
                android:focusableInTouchMode="true"
                android:src="@mipmap/apps"
                android:background="@drawable/top_selector"
                android:nextFocusDown="@+id/gallery"
                android:nextFocusLeft="@+id/item1"
                android:onClick="TopOnclick"
                />
            <TextView
                android:layout_width="@dimen/px150"
                android:layout_height="wrap_content"
                android:textColor="@color/white_90"
                android:layout_below="@+id/item2"
                android:layout_marginTop="@dimen/px10"
                android:gravity="center"
                android:focusable="false"
                android:focusableInTouchMode="false"
                android:textSize="@dimen/px30"
                android:text="@string/apps"/>
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/item3r"
            android:layout_width="@dimen/px160"
            android:layout_height="@dimen/px210"
            android:focusable="false"
            android:focusableInTouchMode="false"
           >
            <ImageView
                android:id="@+id/item3"
                android:layout_width="@dimen/px160"
                android:layout_height="@dimen/px160"
                android:padding="@dimen/px25"
                android:focusable="true"
                android:focusableInTouchMode="true"
                android:src="@mipmap/files"
                android:background="@drawable/top_selector"
                android:nextFocusDown="@+id/gallery"
                android:nextFocusLeft="@+id/item2"
                android:onClick="TopOnclick"
                />
            <TextView
                android:layout_width="@dimen/px150"
                android:layout_height="wrap_content"
                android:textColor="@color/white_90"
                android:layout_below="@+id/item3"
                android:layout_marginTop="@dimen/px10"
                android:gravity="center"
                android:focusable="false"
                android:focusableInTouchMode="false"
                android:textSize="@dimen/px30"
                android:text="@string/filemanager"/>
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/item4r"
            android:layout_width="@dimen/px160"
            android:layout_height="@dimen/px210"

            >
            <ImageView
                android:id="@+id/item4"
                android:layout_width="@dimen/px160"
                android:layout_height="@dimen/px160"
                android:padding="@dimen/px25"
                android:focusable="true"
                android:focusableInTouchMode="true"
                android:src="@mipmap/settings"
                android:background="@drawable/top_selector"
                android:nextFocusDown="@+id/gallery"
                android:nextFocusLeft="@+id/item3"
                android:onClick="TopOnclick"
                />
            <TextView
                android:layout_width="@dimen/px150"
                android:layout_height="wrap_content"
                android:textColor="@color/white_90"
                android:layout_below="@+id/item4"
                android:layout_marginTop="@dimen/px10"
                android:gravity="center"
                android:focusable="false"
                android:focusableInTouchMode="false"
                android:textSize="@dimen/px30"
                android:text="@string/settings"/>
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/item5r"
            android:layout_width="@dimen/px160"
            android:layout_height="@dimen/px210"
            >
            <ImageView
                android:id="@+id/item5"
                android:layout_width="@dimen/px160"
                android:layout_height="@dimen/px160"
                android:padding="@dimen/px25"
                android:focusable="true"
                android:focusableInTouchMode="true"
                android:src="@mipmap/hisfav"
                android:background="@drawable/top_selector"
                android:onClick="TopOnclick"
                />
            <TextView
                android:layout_width="@dimen/px150"
                android:layout_height="wrap_content"
                android:textColor="@color/white_90"
                android:layout_below="@+id/item5"
                android:layout_marginTop="@dimen/px10"
                android:gravity="center"
                android:focusable="false"
                android:focusableInTouchMode="false"
                android:textSize="@dimen/px30"
                android:text="@string/history"/>
        </RelativeLayout>
        <RelativeLayout
            android:id="@+id/item6r"
            android:layout_width="@dimen/px160"
            android:layout_height="@dimen/px210"
            >
            <ImageView
                android:id="@+id/item6"
                android:layout_width="@dimen/px160"
                android:layout_height="@dimen/px160"
                android:padding="@dimen/px25"
                android:focusable="true"
                android:focusableInTouchMode="true"
                android:src="@mipmap/user"
                android:background="@drawable/top_selector"
                android:nextFocusDown="@+id/gallery"
                android:nextFocusLeft="@+id/item4"
                android:onClick="TopOnclick"
                />
            <TextView
                android:layout_width="@dimen/px150"
                android:layout_height="wrap_content"
                android:textColor="@color/white_90"
                android:layout_below="@+id/item6"
                android:layout_marginTop="@dimen/px10"
                android:gravity="center"
                android:focusable="false"
                android:focusableInTouchMode="false"
                android:textSize="@dimen/px30"
                android:text="@string/login"/>
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/item7r"
            android:layout_width="@dimen/px160"
            android:layout_height="@dimen/px210"
            >
            <ImageView
                android:id="@+id/item7"
                android:layout_width="@dimen/px160"
                android:layout_height="@dimen/px160"
                android:padding="@dimen/px25"
                android:focusable="true"
                android:focusableInTouchMode="true"
                android:src="@mipmap/clean"
                android:background="@drawable/top_selector"
                android:nextFocusDown="@+id/gallery"
                android:nextFocusLeft="@+id/item6"
                android:onClick="TopOnclick"
                />
            <TextView
                android:layout_width="@dimen/px150"
                android:layout_height="wrap_content"
                android:textColor="@color/white_90"
                android:layout_below="@+id/item7"
                android:layout_marginTop="@dimen/px10"
                android:gravity="center"
                android:focusable="false"
                android:focusableInTouchMode="false"
                android:textSize="@dimen/px30"
                android:text="@string/clean"/>
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/item8r"
            android:layout_width="@dimen/px160"
            android:layout_height="@dimen/px210"
            android:visibility="gone">
            <ImageView
                android:id="@+id/item8"
                android:layout_width="@dimen/px160"
                android:layout_height="@dimen/px160"
                android:padding="@dimen/px25"
                android:focusable="true"
                android:focusableInTouchMode="true"
                android:src="@mipmap/weather"
                android:background="@drawable/top_selector"
                android:nextFocusDown="@+id/gallery"
                android:onClick="TopOnclick"
                />
            <TextView
                android:layout_width="@dimen/px150"
                android:layout_height="wrap_content"
                android:textColor="@color/white_90"
                android:layout_below="@+id/item8"
                android:layout_marginTop="@dimen/px10"
                android:gravity="center"
                android:focusable="false"
                android:focusableInTouchMode="false"
                android:textSize="@dimen/px30"
                android:text="@string/weather"/>
        </RelativeLayout>
        <RelativeLayout
            android:id="@+id/item9r"
            android:layout_width="@dimen/px160"
            android:layout_height="@dimen/px210"
            >
            <ImageView
                android:id="@+id/item9"
                android:layout_width="@dimen/px160"
                android:layout_height="@dimen/px160"
                android:padding="@dimen/px25"
                android:focusable="true"
                android:focusableInTouchMode="true"
                android:src="@mipmap/helpsupport"
                android:background="@drawable/top_selector"
                android:nextFocusDown="@+id/gallery"
                android:nextFocusLeft="@+id/item8"
                android:onClick="TopOnclick"
                />
            <TextView
                android:layout_width="@dimen/px150"
                android:layout_height="wrap_content"
                android:textColor="@color/white_90"
                android:layout_below="@+id/item9"
                android:layout_marginTop="@dimen/px10"
                android:gravity="center"
                android:focusable="false"
                android:focusableInTouchMode="false"
                android:textSize="@dimen/px30"
                android:text="@string/helpsupport"/>
        </RelativeLayout>
    </LinearLayout>


</FrameLayout>