<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tv="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="@dimen/h_500"
    >
    <TextView
        android:id="@+id/anim_iv2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/toast_open_app"
        android:focusable="false"
        android:focusableInTouchMode="false"
        android:textSize="@dimen/px34"
        android:gravity="center_vertical"
        android:textColor="@color/white_50"
        android:layout_centerHorizontal="true"
        android:layout_alignParentTop="true"
        android:drawableStart="@mipmap/button_iv"
        android:drawablePadding="@dimen/px10"
        />
    <View
        android:layout_marginTop="@dimen/px65"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginLeft="@dimen/px85"
        android:layout_marginRight="@dimen/px85"
        android:background="@mipmap/buttom_bg"
        />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:focusable="false"
        android:focusableInTouchMode="false"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/anim_iv2"
        android:layout_marginTop="@dimen/px20"
        android:textSize="@dimen/px35"
        android:textColor="@android:color/white"
        android:text="@string/open_tip"
        />
    <com.ider.overlauncher.view.TvHorizontalGridView
        android:id="@+id/grid_download"
        android:layout_width="match_parent"
        android:layout_height="@dimen/h_180"
        android:layout_marginTop="@dimen/px135"
        android:layout_marginLeft="@dimen/px100"
        android:layout_marginRight="@dimen/px100"
        tv:cursorRes="@drawable/focusiv"
        tv:boarderLeftInt="20"
        tv:boarderRightInt="40"
        tv:boarderTopInt="20"
        tv:boarderBottomInt="45"
        tv:durationTranslate="@integer/int5"
        tv:itemWidth="@dimen/h_130"
        tv:itemHeight="@dimen/h_130"
        tv:rows="1"
        tv:paddingLeft="@dimen/px31"
        tv:paddingTop="@dimen/px30"
        tv:animationType="TRANSLATE"
        />
    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/px5"
        android:focusable="false"
        android:layout_marginLeft="@dimen/px100"
        android:layout_marginRight="@dimen/px100"
        android:layout_marginTop="@dimen/px410"
        android:focusableInTouchMode="false"
        android:background="@drawable/left_line"
        />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:focusable="false"
        android:focusableInTouchMode="false"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/grid_download"
        android:layout_marginTop="@dimen/px20"
        android:textSize="@dimen/px35"
        android:textColor="@android:color/white"
        android:text="@string/reCommand_tip"
        />
    <com.ider.overlauncher.view.TvHorizontalGridView
        android:id="@+id/grid_notdownload"
        android:layout_below="@+id/grid_download"
        android:layout_marginTop="@dimen/px465"
        android:layout_width="match_parent"
        android:layout_height="@dimen/h_180"
        android:layout_marginLeft="@dimen/px100"
        android:layout_marginRight="@dimen/px100"
        tv:cursorRes="@drawable/focusiv"
        tv:boarderLeftInt="20"
        tv:boarderRightInt="40"
        tv:boarderTopInt="20"
        tv:boarderBottomInt="45"
        tv:durationTranslate="@integer/int5"
        tv:itemWidth="@dimen/h_130"
        tv:itemHeight="@dimen/h_130"
        tv:rows="1"
        tv:paddingLeft="@dimen/px30"
        tv:paddingTop="@dimen/px28"
        tv:animationType="TRANSLATE"
        />

</RelativeLayout>
